add snipcart and test product

--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/snipcart": "^1.1.1"
+  }
 }
